Footer layout bug

--- a/client/components/Footer/index.css
+++ b/client/components/Footer/index.css
@@ -23,8 +23,8 @@
     flex: 1;
     margin-top: var(--spacing);
     padding: calc(var(--spacing) / 2);
-
     @media (--tablet) {
+      margin-top: 0;
       margin-right: var(--spacing);
     }
 
